--- a/templates/vhost/_proxy.erb
+++ b/templates/vhost/_proxy.erb
@@ -1,8 +1,12 @@
-<% if @proxy_dest or @proxy_pass -%>
+<% if @proxy_dest or @proxy_pass or @proxy_pass_match -%>
 
   ## Proxy rules
   ProxyRequests Off
 <%- end -%>
+<% [@proxy_pass_match].flatten.compact.each do |proxymatch| %>
+  ProxyPassMatch   <%= proxymatch['path'] %> <%= proxymatch['url'] %>
+  ProxyPassReverse <%= proxymatch['path'] %> <%= proxymatch['url'] %>
+<% end %>
 <% [@proxy_pass].flatten.compact.each do |proxy| %>
   ProxyPass <%= proxy['path'] %> <%= proxy['url'] %>
   <Location <%= proxy['path']%>/>
